<resources>
    <string name="about_message">Version: 2.0.7\n\nAutool was created to make your life easier. Use it wisely, use it often and don’t forget to rate it!</string>
    <string name="new_feaures">Version: 2.0.7\n\nWhat\'s new:\n- Added Autocomplete feature for locations (which can be enabled or disabled from Settings)\n- Various bug fixes</string>
    <string name="title_section1">ROUTS</string>
    <string name="title_section2">SERVICES</string>
    <string name="title_section3">CAR DETAILS</string>
    <string name="title_section4">TIPS</string>
    <string name="fuel_type">Fuel type:</string>
    <string name="gas_price">approximately</string>
    <string name="save_info">Save</string>
    <string name="cancel_info">Cancel</string>
    <string name="consumption">Consumption:</string>
    <string name="consumption2">Consumption</string>
    <string name="info_description_exists">Below is the information you provided for your car. You can always edit this data.</string>
    <string name="routs_gas_label">Gas consumption:</string>
    <string name="routs_gas_price">Gas price:</string>
    <string name="routs_gas_price2">Gas price</string>
    <string name="edit">Edit</string>
    <string name="search_city">Search city</string>
    <string name="last_vehicle_inspection">Inspection exp. date:</string>
    <string name="last_vehicle_inspection_long">Inspection expiration date:</string>
    <string name="auto_insurance_expiration_date">Auto insurance expiration date:</string>
    <string name="auto_insurance_expiration_date_short">Insurance exp. date:</string>
    <string name="road_tax_expiration_date_short">Road tax exp. date:</string>
    <string name="measurement">Measurement unit</string>
    <string name="currency">Currency</string>
    <string name="reminder">Events reminder</string>
    <string name="road_tax_expiration_date">Road tax expiration date:</string>
    <string name="next_road_tax">Next road tax:</string>
    <string name="inspection_datepicker_message">Inspection expiration date must be in the future!</string>
    <string name="insurance_datepicker_message">Insurance expiration date must be in the future!</string>
    <string name="road_tax_datepicker_message">Road tax expiration date must be in the future!</string>
    <string name="preference_category_title">Autool Settings</string>
    <string name="next_inspection">Next vehicle inspection:</string>
    <string name="next_insurance">Next vehicle insurance:</string>
    <string name="calendar">Calendar</string>
    <string name="vehicle_inspection_title">Vehicle inspection</string>
    <string name="vehicle_inspection_location">At the auto service station</string>
    <string name="vehicle_inspection_description">You need to go to a service station to inspect your vehicle. The last inspection is almost expired.</string>
    <string name="vehicle_insurance_title">Vehicle insurance</string>
    <string name="vehicle_insurance_location">Vehicle insurance company</string>
    <string name="vehicle_insurance_description">The vehicle insurance policy must be renewed. The expiration date is really soon.</string>
    <string name="vehicle_road_tax_title">Vehicle road tax</string>
    <string name="vehicle_road_tax_location">Road tax office or gas station</string>
    <string name="vehicle_road_tax_description">The road tax will expire soon. You have to go to a gas station to pay for the next period.</string>
    <string name="added_in_calendar">Calendar</string>
    <string name="event_added">Event added in Calendar</string>
    <string name="reminders_exist_title">Keep your car in perfect shape!</string>
    <string name="search_title">Places of interest for your car</string>
    <string name="info_exist_title">Your car’s specs</string>
    <string name="routs_title">Get useful trip information</string>
    <string name="view_on_map">View on map</string>
    <string name="routs_details_title">Plan ahead!</string>
    <string name="routs_details_description">Be road ready and avoid unwanted surprises by checking all the details you need for your trip.</string>
    <string name="title_activity_route_map">Route Map</string>
    <string name="reset">Reset</string>
    <string name="no_network">No network connection available. Would you like to enable one right now?</string>
    <string name="fill_route">Please fill in the departure and destination cities</string>
    <string name="reset_app">Are you sure you want to clear all saved data? This will delete all the details for your car and the events saved in your calendar.</string>
    <string name="no_result_title">No results found!</string>
    <string name="current_location">Current location</string>
    <string name="reminders_updated">All reminders have been updated</string>
    <string name="unknown_error">An error occurred, please try again!</string>
    <string name="tips_title">Tips Title</string>
    <string name="tips_description">Tips Description</string>
    <string name="share_subject">An interesting Autool Tip</string>
    <string name="about">About</string>
    <string name="app_name">AuTool</string>
    <string name="add_waypoint">Waypoint</string>
    <string name="waypoint_city1">Waypoint city 1</string>
    <string name="waypoint_city2">Waypoint city 2</string>
    <string name="waypoint_city3">Waypoint city 3</string>
    <string name="waypoint_city4">Waypoint city 4</string>
    <string name="title_activity_routs">Route Info</string>
    <string name="title_activity_car_details">Car Details</string>
    <string name="departure_label">Departure:</string>
    <string name="destination_label">Destination:</string>
    <string name="empty_value">-</string>
    <string name="empty_value2">Tap to set.</string>
    <string name="waypoint1_label">Waypoint 1:</string>
    <string name="waypoint2_label">Waypoint 2:</string>
    <string name="waypoint3_label">Waypoint 3:</string>
    <string name="waypoint4_label">Waypoint 4:</string>
    <string name="distance_label">Distance:</string>
    <string name="duration_label">Duration:</string>
    <string name="gas_consumption_label">Fuel consumption:</string>
    <string name="gas_price_label">Fuel price:</string>
    <string name="distance_value_km">%1$s km</string>
    <string name="distance_value_mi">%1$s mi</string>
    <string name="average_speed_label">Average speed:</string>
    <string name="speed_km">%1$s km/h</string>
    <string name="speed_mi">%1$s mi/h</string>
    <string name="route_button">Route Info</string>
    <string name="gas_consumption_label2">Fuel consumption:</string>
    <string name="fuel_type_label">Fuel type:</string>
    <string name="fuel_type_label2">Fuel type</string>
    <string name="inspection_date_label">Inspection exp. date:</string>
    <string name="insurance_date_label">Insurance exp. date:</string>
    <string name="road_tax_date_label">Road tax exp. date</string>
    <string name="inspection_date_label2">Inspection expiration date</string>
    <string name="insurance_date_label2">Insurance expiration date</string>
    <string name="road_tax_date_label2">Road tax expiration date</string>
    <string name="fuel_tank_label">Fuel tank capacity:</string>
    <string name="fuel_tank_label2">Fuel tank capacity</string>
    <string name="edit_details_button_label">Edit Car Details</string>
    <string name="gas_consumption_label3">Fuel consumption</string>
    <string name="gas_price_label2">Fuel price</string>
    <string name="technical_details">Technical details</string>
    <string name="important_dates">Important dates</string>
    <string name="save">Save</string>
    <string name="set_fuel_consumption_title">Set fuel consumption</string>
    <string name="set_fuel_consumption_message_metric">Please set you car\'s fuel consumption (l/100 km)</string>
    <string name="set_fuel_consumption_message_imperial">Please set you car\'s fuel consumption (gal/100 mi)</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="fuel_consumption_litres">%1$s l/100 km</string>
    <string name="fuel_consumption_gallons">%1$s gal/100 mi</string>
    <string name="fuel_consumption_litres2">%1$s l</string>
    <string name="fuel_consumption_gallons2">%1$s gal</string>
    <string name="set_fuel_price_title">Set fuel price</string>
    <string name="set_fuel_price_message_metric">Please set the fuel price (%1$s/l)</string>
    <string name="set_fuel_price_message_imperial">Please set the fuel price (%1$s/gal)</string>
    <string name="set_fuel_type_title">Select fuel type</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="biodiesel">Biodiesel</string>
    <string name="autogas">Autogas</string>
    <string name="ethanol">Ethanol</string>
    <string name="hybrid">Hybrid</string>
    <string name="set_fuel_tank_capacity_title">Set fuel tank capacity</string>
    <string name="set_fuel_tank_capacity_message_metric">Please set the fuel tank capacity (l)</string>
    <string name="set_fuel_tank_capacity_message_imperial">Please set the fuel tank capacity (gal)</string>
    <string name="date_format">%1$d %2$s %3$d</string>
    <string name="date_invalid">Expiration date must be in the future</string>
    <string name="inspection_date_saved">Inspection expiration date saved</string>
    <string name="insurance_date_saved">Insurance expiration date saved</string>
    <string name="road_tax_date_saved">Road tax expiration date saved</string>
    <string name="fuel_consumption_saved">Fuel consumption saved</string>
    <string name="fuel_price_saved">Fuel price saved</string>
    <string name="fuel_type_saved">Fuel type saved</string>
    <string name="fuel_tank_capacity_saved">Fuel tank capacity saved</string>
    <string name="elevation_chart_title">Altitude variation</string>
    <string name="elevation_x_km">Distance (km)</string>
    <string name="elevation_x_mi">Distance (mi)</string>
    <string name="elevation_y_m">Altitude (m)</string>
    <string name="elevation_y_feet">Altitude (feet)</string>
    <string name="departure_time">Departure time</string>
    <string name="departure_date">Departure date</string>
    <string name="weather_city_format">Weather in %1$s, at %2$s</string>
    <string name="weather_temp_celsius_format">%1$s°C</string>
    <string name="weather_temp_farenheit_format">%1$s°F</string>
    <string name="weather_feels_like_celsius_format">Feels like %1$s°C</string>
    <string name="weather_feels_like_farenheit_format">Feels like %1$s°F</string>
    <string name="weather_wind_metric_format">Wind: %1$s km/h %2$s</string>
    <string name="weather_wind_imperial_format">Wind: %1$s mi/h %2$s</string>
    <string name="weather_humiditys_format">Humidity: %1$s %%</string>
    <string name="reset_summary">Clear all saved data</string>
    <string name="measurement_summary">metric</string>
    <string name="currency_summary">USD</string>
    <string name="reminder_summary">1 day</string>
    <string name="pref_contact">Send feedback or ask any question</string>
    <string name="contact">Contact</string>
    <string name="no_result_image">No result</string>
    <string name="no_result_description">Tap the \'Back\' button and\nredo your search</string>
    <string name="gas_station_button">Gas Stations</string>
    <string name="auto_service_button">Auto Service</string>
    <string name="car_wash_nearby">Car Wash</string>
    <string name="parking_nearby_button">Parking</string>
    <string name="routs_description">Type in the origin and destination of your travel plan, and you’ll get all the trip details you need.</string>
    <string name="departure_city">Departure city</string>
    <string name="destination_city">Destination city</string>
    <string name="autocomplete_summary">Provide location prediction</string>
    <string name="autocomplete_title">Autocomplete locations</string>
    <string name="powered_by_google">Powered by Google</string>
</resources>