<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/routsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="3dp"
            android:text="@string/routs_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_blue_light"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/routsTitle"
            android:layout_marginTop="20dp"
            android:text="@string/routs_description"
            android:textColor="#888888"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/departureText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructions"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/departure_city"
            android:inputType="textCapWords"
            android:maxLines="@integer/max_rows"
            android:nextFocusDown="@+id/destinationText"></AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/waypointText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departureText"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/waypoint_city1"
            android:inputType="textCapWords"
            android:maxLines="@integer/max_rows"
            android:visibility="gone"></AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/waypointText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waypointText1"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/waypoint_city2"
            android:inputType="textCapWords"
            android:maxLines="@integer/max_rows"
            android:visibility="gone"></AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/waypointText3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waypointText2"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/waypoint_city3"
            android:inputType="textCapWords"
            android:maxLines="@integer/max_rows"
            android:visibility="gone"></AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/waypointText4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waypointText3"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/waypoint_city4"
            android:inputType="textCapWords"
            android:maxLines="@integer/max_rows"
            android:visibility="gone"></AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/destinationText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waypointText4"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/destination_city"
            android:inputType="textCapWords"
            android:maxLines="@integer/max_rows"
            android:nextFocusDown="@+id/waypointText"></AutoCompleteTextView>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/destinationText"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/add_waypoint_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_left"
                android:drawableLeft="@drawable/ic_action_new"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/add_waypoint"
                android:textSize="14sp" />

            <Button
                android:id="@+id/get_route_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_right"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/road_sign"
                android:gravity="right|center_vertical"
                android:text="@string/route_button"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:textColor="#888888"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/buttons_container"
            android:text="@string/powered_by_google" />

        <Button
            android:id="@+id/disclaimerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableLeft="@drawable/about"
            android:drawablePadding="10dp"
            android:minHeight="25dip"
            android:minWidth="25dip"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingTop="0dp" />

        <Button
            android:id="@+id/currentLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/departureText"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableRight="@drawable/location_place"
            android:minWidth="25dp" />

        <ProgressBar
            android:id="@+id/currentLocation_progress"
            style="?android:attr/android:progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/departureText"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/clear_waypoint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/waypointText1"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableRight="@drawable/ic_action_remove"
            android:minWidth="25dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/clear_waypoint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/waypointText2"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableRight="@drawable/ic_action_remove"
            android:minWidth="25dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/clear_waypoint3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/waypointText3"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableRight="@drawable/ic_action_remove"
            android:minWidth="25dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/clear_waypoint4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/waypointText4"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:drawableRight="@drawable/ic_action_remove"
            android:minWidth="25dp"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>